--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,101 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Inter', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navbar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 55px;
+  background-color: #F55A5A;
+  color: white;
+  margin-bottom: 40px;
+}
+
+.navbar span {
+  padding-left: 10px;
+  font-weight: 500;
+}
+
+
+.main-content {
+  display: flex;
+  justify-content: center;
+  /* flex: 0 0 auto; */
+}
+
+/* card-styling */
+
+.card {
+  display: flex;
+  align-items: center;
+  width: 470px;
+  padding: 19px 39px;
+  gap: 20px;
+  border-bottom: 1px solid #f5f5f5;
+}
+
+.card--image {
+  width: 126px;
+  height: 168px;
+  border-radius: 5px;
+}
+
+.card--info {
+  display: flex;
+  flex-direction: column;
+  text-align: start;
+  font-size: 10.25px;
+  color: #2B283A;
+}
+
+.card--info>h1 {
+  font-size: 25px;
+  margin: 0;
+  margin-bottom: 6px;
+}
+
+.card--info>p {
+  font-size: 10;
+  margin: 0;
+}
+
+.card--location {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  font-size: 10.24px;
+}
+
+.card--location>i {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  color: #F55A5A;
+}
+
+.card--location h4 {
+  margin: 8px 0;
+  color: #2B283A;
+  letter-spacing: 2px;
+}
+
+.card--location>a {
+  color: #918E9B;
+}
+
+
+.card--date {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.card--date>h4 {
+  margin: 8px 0;
 }
